--- a/package.json
+++ b/package.json
@@ -3,23 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev && start-slicemachine",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
     "@geist-ui/icons": "^1.0.2",
+    "@prismicio/client": "^7.11.0",
+    "@prismicio/next": "^1.7.0",
+    "@prismicio/react": "^2.9.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@slicemachine/adapter-next": "^0.3.51",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
+    "slice-machine-ui": "^2.8.1",
     "typescript": "^5"
   }
 }
